# eyeball

./: .rustfmt.toml  .typos.toml  Cargo.toml  README.md
.cargo/: config.toml
.github/:  FUNDING.yml
.github/workflows/: ci.yml
eyeball/: CHANGELOG.md  Cargo.toml  README.md
eyeball-im/: CHANGELOG.md  Cargo.toml
eyeball-im-util/: CHANGELOG.md  Cargo.toml
eyeball-im-util/src/: lib.rs  vector.rs  vector2.rs
eyeball-im-util/src/vector/: filter.rs  head.rs  limit.rs  ops.rs  skip.rs  sort.rs  tail.rs  traits.rs
eyeball-im-util/src/vector2/: filter.rs
eyeball-im-util/tests/: it.rs
eyeball-im-util/tests/it/: filter.rs  filter_map.rs  head.rs  limit.rs  main.rs  skip.rs  sort.rs  sort_by.rs  sort_by_key.rs  tail.rs
eyeball-im/src/: hashmap.rs  lib.rs  reusable_box.rs  vector.rs  vector2.rs
eyeball-im/src/vector/: entry.rs  subscriber.rs  traits.rs  transaction.rs
eyeball-im/src/vector2/: entry.rs
eyeball-im/tests/: it.rs  observable_vec.rs
eyeball-im/tests/it/: apply.rs  batch.rs  entry.rs  main.rs  panic.rs  serde.rs
eyeball/benches/: set_a_lot.rs
eyeball/src/: lazy_shared.rs  lazy_subscriber.rs  lib.rs  lock.rs  observable.rs  read_guard.rs  shared.rs  shared_observable.rs  state.rs  subscriber.rs  unique.rs
eyeball/src/subscriber/: async_lock.rs
eyeball/tests/: it.rs
eyeball/tests/it/: async_lock.rs  main.rs  shared.rs  unique.rs
src/: lib.rs  notifier.rs  observable.rs  vector.rs
