[workspace]
members = ["eyeball", "eyeball-im", "eyeball-im-util"]
resolver = "2"

[workspace.package]
license = "MPL-2.0"
repository = "https://github.com/jplatte/eyeball"
categories = ["asynchronous", "gui"]
keywords = ["async", "observable", "reactive"]

[workspace.dependencies]
assert_matches = "1.5.0"
futures-core = "0.3.26"
futures-util = { version = "0.3.26", default-features = false }
imbl = "4.0.0"
readlock = "0.1.5"
stream_assert = "0.1.0"
tokio = { version = "1.25.0", features = ["sync"] }
tokio-util = "0.7.8"
tracing = { version = "0.1.37", default-features = false, features = ["std"] }


[patch.crates-io]
# Needed to fix an incorrect bounds check in `imbl::Focus::narrow()`. 
# Can be removed once a new version of imbl is released with this fix included.
imbl = { git = "https://github.com/jneem/imbl", rev = "7c5f24099c62c9f8d5d949bb79725c91251b78fb" }


[workspace.lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
missing_debug_implementations = "warn"
missing_docs = "warn"
semicolon_in_expressions_from_macros = "warn"
unreachable_pub = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
branches_sharing_code = "warn"
cloned_instead_of_copied = "warn"
dbg_macro = "warn"
empty_line_after_outer_attr = "warn"
inefficient_to_string = "warn"
macro_use_imports = "warn"
map_flatten = "warn"
mod_module_files = "warn"
mut_mut = "warn"
nonstandard_macro_braces = "warn"
semicolon_if_nothing_returned = "warn"
str_to_string = "warn"
todo = "warn"
unreadable_literal = "warn"
unseparated_literal_suffix = "warn"
wildcard_imports = "warn"
