[package]
name = "eyeball-im-util"
version = "0.5.1"
edition = "2021"
description = "Helpful utilities for `eyeball-im`."
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
eyeball-im = { version = "0.4.1", path = "../eyeball-im" }
futures-core.workspace = true
imbl = "2.0.0"
pin-project-lite = "0.2.9"

[dev-dependencies]
eyeball = { version = "0.8.6", path = "../eyeball" }
futures-util.workspace = true
stream_assert.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
