[package]
name = "eyeball-im-util"
version = "0.5.2"
edition = "2021"
description = "Helpful utilities for `eyeball-im`."
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
arrayvec = "0.7.4"
eyeball-im = { version = "0.4.2", path = "../eyeball-im" }
futures-core.workspace = true
imbl = "2.0.0"
pin-project-lite = "0.2.9"
smallvec = { version = "1.11.2", features = ["const_generics", "const_new"] }

[dev-dependencies]
eyeball = { version = "0.8.6", path = "../eyeball" }
futures-util.workspace = true
stream_assert.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
