[package]
name = "eyeball-im-util"
version = "0.6.0"
edition = "2021"
rust-version = "1.65.0"
description = "Helpful utilities for `eyeball-im`."
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
arrayvec = "0.7.4"
eyeball-im = { version = "0.5.0", path = "../eyeball-im" }
futures-core.workspace = true
imbl = "3.0.0"
pin-project-lite = "0.2.9"
smallvec = { version = "1.11.2", features = ["const_generics", "const_new"] }

[dev-dependencies]
eyeball = { version = "0.8.6", path = "../eyeball" }
futures-util.workspace = true
stream_assert.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
