[package]
name = "eyeball-im"
version = "0.4.2"
edition = "2021"
description = "Observable collections based on the `im` crate."
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
futures.workspace = true
futures-core.workspace = true
imbl = "2.0.0"
tokio.workspace = true
tokio-util.workspace = true
tracing = { workspace = true, optional = true }

[dev-dependencies]
stream_assert.workspace = true

[lints]
workspace = true
