[package]
name = "eyeball-im"
version = "0.5.0"
edition = "2021"
description = "Observable collections based on the `im` crate."
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
futures-core.workspace = true
imbl = "3.0.0"
serde = { version = "1.0", optional = true }
tokio.workspace = true
tokio-util.workspace = true
tracing = { workspace = true, optional = true }

[dev-dependencies]
serde_json = "1.0"
stream_assert.workspace = true

[features]
default = []
# Enable this feature to implement `serde::Serialize` for `VectorDiff`.
serde = ["dep:serde", "imbl/serde"]

[lints]
workspace = true
