[package]
name = "eyeball"
version = "0.7.0"
edition = "2021"
license = "MPL-2.0"
description = "Add observability to your Rust types!"
repository = "https://github.com/jplatte/eyeball"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
futures-core.workspace = true
readlock.workspace = true
tracing = { workspace = true, optional = true }

# for benchmarking
criterion = { version = "0.4.0", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }

[features]
__bench = ["dep:criterion", "tokio/rt-multi-thread"]

[[bench]]
name = "set_a_lot"
harness = false
required-features = ["__bench"]

[lints]
workspace = true
