[package]
name = "eyeball"
version = "0.8.5"
edition = "2021"
rust-version = "1.70.0"
description = "Add observability to your Rust types!"
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
futures-core.workspace = true
readlock.workspace = true
readlock-tokio = { version = "0.1.1", optional = true }
tracing = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tokio-util = { version = "0.7.8", optional = true }

# for benchmarking
criterion = { version = "0.5.1", optional = true }

[dev-dependencies]
futures-util.workspace = true
stream_assert.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }

[features]
async-lock = ["dep:readlock-tokio", "dep:tokio", "dep:tokio-util"]

__bench = ["dep:criterion", "dep:tokio", "tokio?/rt-multi-thread"]

[[bench]]
name = "set_a_lot"
harness = false
required-features = ["__bench"]

[lints]
workspace = true
