[package]
name = "eyeball"
version = "0.8.8"
edition = "2021"
rust-version = "1.70.0"
description = "Add observability to your Rust types!"
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
features = ["async-lock", "tracing"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
futures-core.workspace = true
readlock.workspace = true
readlock-tokio = { version = "0.1.3", optional = true }
slab = "0.4.9"
tracing = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tokio-util = { version = "0.7.8", optional = true }

# for benchmarking
divan = { version = "0.1.14", optional = true }

[dev-dependencies]
futures-executor = "0.3.30"
futures-util.workspace = true
macro_rules_attribute = "0.2.0"
stream_assert.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }

[features]
async-lock = ["dep:readlock-tokio", "dep:tokio", "dep:tokio-util"]

__bench = ["dep:divan", "dep:tokio", "tokio?/rt-multi-thread"]

[[bench]]
name = "set_a_lot"
harness = false
required-features = ["__bench"]

[lints]
workspace = true
